config refactor